Issue #27066: Fixed SystemError if a custom opener (for open()) returns a negative number without setting an exception.